--- a/templates/orders/ordershistory.html
+++ b/templates/orders/ordershistory.html
@@ -20,6 +20,7 @@ Orders - {{ block.super }}
 					
 						<tr>
 							<th>Index</th>
+							<th>Created</th>
 							<th>Status</th>
 							<th>Total Price</th>
 							<th>Image</th>
@@ -33,6 +34,9 @@ Orders - {{ block.super }}
 						<tr>
 							<td>
 							{{item.id}}
+							</td>
+							<td>
+							{{item.created|date:"SHORT_DATE_FORMAT"}}
 							</td>
 							<td>
 							{{ item.status.name }}
@@ -59,6 +63,7 @@ Orders - {{ block.super }}
 							
 							</tr>
 							<tr>
+							<td></td>
 							<td></td>
 							<td></td>
 							<td></td>
