--- a/templates/orders/success.html
+++ b/templates/orders/success.html
@@ -9,8 +9,8 @@ Order accepted - {{ block.super }}
 		<div class="row">
 
 			<div class="col-xl-8 offset-xl-2">
-				<h3 class="text-center mt-7">Your order accepted!</h3>
-				Now we will do our best to ship your order fast as we can.
+				<h3 class="text-center mt-7 bg">Your order accepted!</h3>
+				<div class="bg">Now we will do our best to ship your order fast as we can.</div>
 			</div>
 		</div>
 	</div>
