--- a/templates/authrow.html
+++ b/templates/authrow.html
@@ -3,7 +3,7 @@
 	You entered as: <u>{{user.username}}</u>
 	</div>
 	<div class="auth-button">
-	<span class="tab-8"><a href="{% url 'orders_url' %}">Your orders</a></span>
+	<span class="span-line"><a href="{% url 'orders_url' %}">Your orders</a></span>
 	<a href="{% url 'logout_url' %}">Logout</a>
 	</div>
 </div>
