--- a/templates/login.html
+++ b/templates/login.html
@@ -17,8 +17,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		
-		<link rel="stylesheet" href="{% static 'css/smoke.css' %}" />  
+ 
 		  
 		<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 </head>
@@ -53,7 +52,7 @@
 				</button>
 			</form>
 			<div class="forgot text-center mt-1">
-				<a href="#" class="tab-8">Forgot your password?</a>
+				<a href="{% url 'password_reset' %}" class="tab-8">Forgot your password?</a>
 				<a href="{% url 'register_url' %}">
 					Create an account
 				</a>
