--- a/templates/orders/checkout_.html
+++ b/templates/orders/checkout_.html
@@ -16,17 +16,8 @@ Checkout - {{ block.super }}
 				{% if user.is_authenticated %}
 
 				{% else %}
-				<div class="form-inline">
-				<div class="form-group">
 				
-
-				
-				</div>
-				</div>
-		
-					<div class="col-xl-4 offset-xl-4">
-						
-						{% if form.errors %}
+				{% if form.errors %}
 					{% for field in form %}
 						{% for error in field.errors %}
 							<div class="alert alert-danger">
@@ -40,17 +31,27 @@ Checkout - {{ block.super }}
 						</div>
 					{% endfor %}
 				{% endif %}
-
-				{{form.as_p}}<br/>
 				
-						
+					<div class="form-inline">
 					
-						
-					</div> 
+						<div class="form-group">
+							<div class="col-lg-4">
+								
+								<span class="form-error">{{ form.email.errors }}</span>
+								<input type="email" name="{{ form.email.html_name }}" class="form-control" value="{{ request.POST.name }}" placeholder="E-mail">
+							</div>
+						</div>
 					
+					
+						<div class="form-group">
+							<div class="col-lg-4">
+								
+								<span class="form-error">{{ form.password.errors }}</span>
+								<input type="password" name="{{ form.password.html_name }}" class="form-control" value="{{ request.POST.name }}" placeholder="Password">
+							</div>
+						</div>
 						
-						
-						
+					</div>
 				{% endif %}
 				<table class="table text-center">
 					<thead>
